--- a/assets/style.css
+++ b/assets/style.css
@@ -111,7 +111,7 @@ body {
   align-items: center;
   justify-content: center;
   gap: 0.75rem;
-
+  text-decoration:none;
   padding: 1rem 1rem; /* More padding */
   width: 100%;
 
