applied two-layout-contain

--- a/assets/style.css
+++ b/assets/style.css
@@ -68,11 +68,11 @@ body {
 
 .input-group input {
   width: 100%;
-  padding: 1rem 1rem; /* Generous vertical padding */
+  padding: 1rem 2rem; /* Generous vertical padding */
   border-radius: 10px; /* More rounded corners */
   border: 1px solid #226e3f; /* Very light border */
   background-color: #f9fafb;
-  font-size: 0.7rem;
+  font-size: 0.9rem;
   transition: border-color 0.2s ease, box-shadow 0.2s ease;
 }
 
@@ -87,6 +87,10 @@ body {
   justify-content: space-between;
   gap: 10px;
 
+}
+.two-column-container input{
+     font-size: 0.9rem;
+     padding: 1rem 1.7rem; 
 }
 .two-column-container > div {
     flex: 1; /* Makes each column take 50% width */
