--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,7 @@
       }
 
       .navbar {
+        width: 100%;
         font-family: 'Times New Roman', Times, serif;
         background-color: rgb(29, 29, 79);
         display: flex;
@@ -108,20 +109,20 @@
         position: relative;
         z-index: 2;
       }
- .product-container{
+    .product-container{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         width: 70%;
         margin: auto;
         gap: 20px;
       }
-      .shirt-container{
-          display: grid;
+      /* .shirt-container{
+        display: grid;
         grid-template-columns: 1fr 1fr ;
         width: 40%;
         margin: auto;
         gap: 20px;
-      }
+      } */
       .product-image{
         position: relative;
       }
@@ -280,114 +281,7 @@
         height: 12px;
       }
 
-      /* --- MOBILE ADJUSTMENTS (Max-width 600px) --- */
-      @media (max-width: 600px) {
-        .navbar {
-          font-family: 'Times New Roman', Times, serif;
-          justify-content: center;
-        }
-        .navbar-list {
-          width: 100%;
-          justify-content: space-between;
-          margin-top: 10px;
-        }
-        .nav-item {
-          text-decoration: none;
-        }
-        .nav-item:hover {
-          font-size: 10px;
-        }
-        .btn {
-          width: 100%;
-          margin-top: 10px;
-          text-align: center;
-        }
-
-        .product-item {
-          width: 180px;
-        }
-        marquee p span {
-          font-size: 7px;
-          padding: 5px 0;
-        }
-
-        .product-cover h3 {
-          font-size: 6vw;
-        }
-        .product-name {
-          font-size: 12px;
-          padding: 5px 5px;
-        }
-        .social-media {
-          gap: 5px;
-        }
-        .icon-style {
-          width: 40px;
-          height: 40px;
-        }
-
-      .footer {
-        font-family: 'Times New Roman', Times, serif;
-        display: flex;
-        justify-content: space-between;
-        background-color: rgb(29, 29, 79);
-        border-radius: 10px;
-        padding: 40px 60px;
-        align-items: start;
-      }
-      .footer-logo {
-        display: flex;
-        align-items: center;
-      }
-      .footer-logo img {
-        width: 35px;
-        height: 35px;
-      }
-      .footer-logo h3 {
-        color: #ffffff;
-        margin-left: 4px;
-        font-size: 12px;
-      }
-      .footer-columns {
-        display: flex;
-        gap: 15px;
-      }
-      .footer-column h4 {
-        color: #ffffff;
-        font-size: 9px;
-        text-transform: uppercase;
-        margin-bottom: 12px;
-        /* letter-spacing: 1px; */
-      }
-
-      .footer-column a {
-        text-decoration: none;
-        color:white;
-        display: block;
-        font-size: 9px;
-        white-space: nowrap;
-      }
-      .footer-column a:hover{
-        color: red;
-      }
-      .contact-item span{
-        color: #ffffff;
-        font-size: 9px;
-      }
-      .contact-item span:hover{
-        color:red;
-      }
-      .contact-item {
-        display: flex;
-        align-items: center;
-        gap: 4px;
-      }
-      .contact-item img {
-        width: 12px;
-        height: 12px;
-      }
-
-      }
+   
       /* --- VERY SMALL SCREENS (Phones <480px) --- */
       @media (max-width: 480px) {
         .logo {
@@ -397,35 +291,55 @@
         }
         .navbar{
           font-family: 'Times New Roman', Times, serif;
+          padding-right: 20px;
         }
         .nav-item {
           padding: 8px 10px;
           font-size: 12px;
+          
         }
         .navbar-list {
           width: 100%;
           justify-content: space-between;
           margin-top: 10px;
+          
         }
-        .btn {
+        /* .btn {
           padding: 6px 8px;
           margin-right: 30px;
           margin-bottom: 10px;
-        }
-
-        .product-item {
-          width: 150px;
-        }
-        .product-name {
-          font-size: 14px;
-          padding: 4px 10px;
+        } */
+        .product-cover{
+            padding-right: 20px;
         }
         .product-cover h3 {
           font-size: 7vw;
         }
+
         p {
           font-size: 18px;
         }
+
+        .product-container {
+         display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        width: 100%;
+        margin: auto;
+        }
+        .product-card {
+          font-size: 14px;
+          padding: 4px 10px;
+        }
+       
+        .add-to-card{
+            font-size: 10px;
+        }
+         .price{
+            font-size: 15px;
+        }
+      .title{
+        font-size: 15px;
+      }
       .footer {
         font-family: 'Times New Roman', Times, serif;
         display: flex;
@@ -434,6 +348,8 @@
         border-radius: 10px;
         padding: 10px 10px;
         align-items: start;
+           width: 100%;
+        margin: auto;
       }
       .footer-logo {
         display: flex;
