--- a/assets/style.css
+++ b/assets/style.css
@@ -918,6 +918,77 @@ p {
     padding: 10px 0;
     font-size: 10px;
   }
+  .footer {
+    font-family: "Times New Roman", Times, serif;
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(29, 29, 79);
+    border-radius: 10px;
+    padding: 10px 10px;
+    align-items: start;
+    width: 100%;
+    margin: auto;
+  }
+  .footer-logo {
+    display: flex;
+    align-items: center;
+  }
+  .footer-logo img {
+    width: 20px;
+    height: 20px;
+  }
+  .footer-logo h3 {
+    color: #ffffff;
+    white-space: nowrap;
+    font-size: 9px;
+    margin-right: 10px;
+  }
+  .footer-columns {
+    display: flex;
+    gap: 17px;
+  }
+  .footer-column h4 {
+    color: #ffffff;
+    font-size: 9px;
+    text-transform: uppercase;
+    margin-bottom: 12px;
+    /* letter-spacing: 1px; */
+  }
+
+  .footer-column a {
+    text-decoration: none;
+    color: #ffffff;
+    display: block;
+    font-size: 7px;
+    white-space: nowrap;
+  }
+
+
+  .contact-item {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+  }
+  .contact-item span {
+    color: #ffffff;
+    font-size: 9px;
+  }
+  .contact-item span:hover {
+    color: red;
+  }
+  .contact-item img {
+    width: 15px;
+    height: 15px;
+  }
+
+  .social-media {
+    gap: 5px;
+  }
+  .icon-style {
+    width: 20px;
+    height: 20px;
+  }
+
 
   /* login-register */
   .container {
@@ -1103,7 +1174,7 @@ p {
     text-decoration: none;
     color: #ffffff;
     display: block;
-    font-size: 9px;
+    font-size: 7px;
     white-space: nowrap;
   }
   .footer-column a:hover {
