responsive nav-bar & bottom bar

--- a/assets/style.css
+++ b/assets/style.css
@@ -742,7 +742,7 @@ p {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgb(37, 121, 196);
+    background-color: #1a1a3a;
     display: flex;
     justify-content: space-around;
     align-items: center;
